DPO-3647 fail when one of the batches fail in BatchExecutionService (#133)